author controller updated for Swagger
